Adding filters sorting and pagination
